fix(checkbox): adjust alignment

--- a/packages/components/src/styles/components/radio-checkbox.sass
+++ b/packages/components/src/styles/components/radio-checkbox.sass
@@ -13,7 +13,6 @@
     display: flex
     flex-direction: row
     justify-content: flex-start
-    // align-items: flex-start
     align-items: stretch
     flex-wrap: wrap
     gap: var(--bal-space-normal)
@@ -111,6 +110,7 @@
       display: inline-block
       position: absolute
       left: 0
+      margin-top: 0
       height: 1.5rem
       width: 1.5rem
       background-color: transparent
@@ -151,7 +151,7 @@
         width: 7px
         height: 13px
         left: 9px
-        margin-top: 4px
+        margin-top: -3px
         transform: rotate(45deg)
   //
   // Symbol colors main, inverted and background
